feature/ ajuste de ramas

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,9 @@ name: Build and Analyze
 on:
   push:
     branches:
-      - master
+      - dev
+      - qa
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 
